// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a pending search dialog (google_web_search) 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀ 
  ▝▀    

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for a shell tool 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀ 
  ▝▀    

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  run_shell_command                                                                         │
│                                                                                              │
│ Running command...                                                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`MainContent tool group border SVG snapshots > should render SVG snapshot for an empty slice following a search tool 1`] = `
"
  ▝▜▄     Gemini CLI v1.2.3
    ▝▜▄
   ▗▟▀ 
  ▝▀    

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⊶  google_web_search                                                                         │
│                                                                                              │
│ Searching...                                                                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
